--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 <body>
 <header>
   <div class="logo">
-    <img src="islamic.png" alt="Logo Islâmica">
+    <img src="islamic.png">
     <h1>Mesquita Brasil</h1>
   </div>
   <nav>
@@ -266,10 +266,10 @@
 <div class="section" id="galeria">
   <h2>🖼️ Galeria</h2>
   <div class="gallery">
-    <img src="1000046261.jpg" alt="Interior da Mesquita">
-    <img src="1000046259.jpg" alt="Momento de oração">
-    <img src="1000046260.jpg" alt="Almoço de sexta-feira">
-    <img src="1000046258.jpg" alt="Aulas na Mesquita">
+    <img src="1000046261.jpg">
+    <img src="1000046259.jpg">
+    <img src="1000046260.jpg">
+    <img src="1000046258.jpg">
   </div>
 </div>
 
